# Tabula-AI

./: .gitignore  agent.py  google_auth.py  main.py  pyproject.toml  sheets_tools.py  test_authentication.py  test_create_sheet.py
config/: settings.py
prompts/: agent_prompt.py
src/agents/: sheets_agent.py
src/authentication/: test_authentication.py
src/instructions/: sheet_agent_instruction.py
src/tabula_ai/: cli.py
src/tabula_ai/agent/: sheets_agent.py  supervisor_agent.py  workspace_agent.py
src/tabula_ai/ai_agents/discovery_agent/: agent.py  instructions.py  schema.py  tools.py
src/tabula_ai/ai_agents/formula_agent/: agent.py  instructions.py  tools.py
src/tabula_ai/ai_agents/supervisor_agent/: agent.py  instructions.py  tools.py
src/tabula_ai/authentication/: google_auth.py  test_authentication.py
src/tabula_ai/config/: settings.py
src/tabula_ai/db/: __init__.py  connection.py  memory.py
src/tabula_ai/instructions/: sheet_agent_instruction.py  supervisor_agent_instructions.py  workspace_agent_instruction.py
src/tabula_ai/runtime/: sheets_runtime.py
src/tabula_ai/tools/: add_sheet.py  append_rows.py  clear_range.py  code_execution.py  create_spreadsheet.py  delete_sheet.py  delete_spreadsheet.py  drive_service.py  evaluate_formula.py  find_spreadsheets.py  get_spreadsheet_schema.py  get_tools.py  list_spreadsheets.py  open_spreadsheet.py  read_range.py  rename_spreadsheet.py  sheets_service.py  web_search.py  write_formula.py  write_range.py
src/tools/: create_spreadsheet.py  get_spreadsheet_schema.py  get_tools.py  open_spreadsheet.py  read_range.py  web_search.py  write_range.py
tools/: sheets_tools.py
