[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tabula-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "nest-asyncio>=1.6.0",
    "openai-agents>=0.17.5",
    "rich>=15.0.0",
    "tavily-python>=0.7.26",
]

[project.scripts]
tabula-ai = "tabula_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
