[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tabula-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "nest-asyncio>=1.6.0",
    "openai-agents>=0.17.5",
    "pydantic>=2.13.4",
    "pytest>=9.1.0",
    "rapidfuzz>=3.14.5",
    "rich>=15.0.0",
    "tavily-python>=0.7.26",
]

[project.scripts]
tabula-ai = "tabula_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "twine>=6.2.0",
]
